# gwb_analysis

./: .gitignore  README.md  environment.yml  index.html  modules.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js
_sources/: analyze_model.rst.txt  index.rst.txt  modules.rst.txt  quickstart.rst.txt
docs/_build/doctrees/: analyze_model.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  installation.html  modules.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  installation.doctree  modules.doctree  quickstart.doctree
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt  quickstart.rst.txt
docs/_build/tml/: genindex.html  index.html  installation.html  modules.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/tml/.doctrees/: environment.pickle  index.doctree  installation.doctree  modules.doctree  quickstart.doctree
docs/_build/tml/_sources/: installation.rst.txt  modules.rst.txt  quickstart.rst.txt
docs/source/: conf.py  installation.rst
gwb_analysis/: analyze_model.py
gwb_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_inits.py
